--- a/index.html
+++ b/index.html
@@ -1569,12 +1569,15 @@
     <script src="js/EasyLazyload.min.js"></script>
     <script>
         lazyLoadInit({
-            showTime: 1100,
-            onLoadBackEnd: function(i, e) {
-                console.log("onLoadBackEnd:" + i);
-            },
-            onLoadBackStart: function(i, e) {
-                console.log("onLoadBackStart:" + i);
+            coverColor:"white",
+            offsetBottom:0,
+            offsetTopm:0,
+            showTime:1100,
+            onLoadBackEnd:function(i,e){
+                console.log("onLoadBackEnd:"+i);
+            }
+            ,onLoadBackStart:function(i,e){
+                console.log("onLoadBackStart:"+i);
             }
         });
     </script>
